# infer_fs

./: Cargo.toml  README.md  test_0.33hz.csv  test_1hz.csv  test_5hz.csv
src/: lib.rs  timeguess.rs
