[package]
name = "infer_fs"
version = "0.3.0"
authors = ["Christopher Davison <c.jr.davison@gmail.com>"]
description = "Simple module to infer samplerate of a dataset."
readme = "./README.md"
keywords = ["Samplerate", "Frequency", "Timestamp"]
license = "MIT"
repository = "http://www.github.com/ChrisDavison/infer_fs"
edition = "2018"

[dependencies]
time = "0.1"
